--- a/src/app/components/admin-role-management/admin-role-management.component.html
+++ b/src/app/components/admin-role-management/admin-role-management.component.html
@@ -15,60 +15,68 @@
     <div class="tab-pane" [ngClass]="{ 'active': activeTab === 'role' }">
       <h3>Rol Yönetimi</h3>
       <button class="btn btn-primary mb-3" (click)="addRole()">Yeni Rol Ekle</button>
-      <p *ngIf="roleModelObj == null">Herhangi bir rol mevcut değil!</p>
-      <table class="admin-table" *ngIf="roleModelObj != null">        
-        <thead>
-          <tr>
-            <th><i class="fa-solid fa-hashtag"></i> ID</th>
-            <th><i class="fas fa-heading "></i> Rol Adı</th>
-            <th><i class="fas fa-tools"></i> İşlemler</th>
-            <th></th>
+      <p *ngIf="roleModelObj.length === 0 ">Herhangi bir rol mevcut değil!</p>
+      <div class="admin-table-responsive">
+        <table class="admin-table" *ngIf="roleModelObj.length > 0">
+          <thead>
+            <tr>
+              <th><i class="fa-solid fa-hashtag"></i> ID</th>
+              <th><i class="fas fa-heading "></i> Rol Adı</th>
+              <th><i class="fas fa-tools"></i> İşlemler</th>
+              <th></th>
 
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let role of roleModelObj">
-            <td><i class="fa-solid fa-hashtag"></i>{{ role.id }}</td>
-            <td>{{ role.name }}</td>
-            <td class="btn-margin">
-              <button class="btn btn-warning me-2 mt-2 mb-2 w-100" (click)="editRole(role)"><i class="fa-solid fa-pen"></i> Düzenle</button>
-            </td>
-            <td class="btn-margin">
-              <button class="btn btn-danger me-2 mt-2 mb-2  w-100" (click)="deleteRole(role.id)"><i class="fas fa-trash-alt"></i> Sil</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let role of roleModelObj">
+              <td><i class="fa-solid fa-hashtag"></i>{{ role.id }}</td>
+              <td>{{ role.name }}</td>
+              <td class="btn-margin">
+                <button class="btn btn-warning me-2 mt-2 mb-2 w-100" (click)="editRole(role)"><i
+                    class="fa-solid fa-pen"></i> Düzenle</button>
+              </td>
+              <td class="btn-margin">
+                <button class="btn btn-danger me-2 mt-2 mb-2  w-100" (click)="deleteRole(role.id)"><i
+                    class="fas fa-trash-alt"></i> Sil</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div class="tab-pane" [ngClass]="{ 'active': activeTab === 'position' }">
       <h3>Pozisyon Yönetimi</h3>
       <button class="btn btn-primary mb-3" (click)="addPosition()">Yeni Pozisyon Ekle</button>
-      <p *ngIf="positionModelObj == null">Herhangi bir pozisyon mevcut değil!</p>
-      <table class="admin-table" *ngIf="positionModelObj != null">
-        <thead>
-          <tr>
-            <th><i class="fa-solid fa-hashtag"></i> ID</th>
-            <th><i class="fas fa-heading"></i> Pozisyon Adı</th>
-            <th><i class="fas fa-align-left"></i> Açıklama</th>
-            <th><i class="fas fa-tools"></i> İşlemler</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let position of positionModelObj ">
-            <td><i class="fa-solid fa-hashtag"></i>{{ position.id }}</td>
-            <td>{{ position.ad }}</td>
-            <td>{{ position.aciklama }}</td>
-            <td>
-              <button class="btn btn-warning me-2 mt-2 mb-2 w-100" (click)="editPosition(position)"><i class="fa-solid fa-pen"></i> Düzenle</button>
-            </td>
-            <td>
-              <button class="btn btn-danger me-2 mt-2 mb-2 w-100" (click)="deletePosition(position.id)"><i class="fas fa-trash-alt"></i> Sil</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <p *ngIf="positionModelObj.length === 0 ">Herhangi bir pozisyon mevcut değil!</p>
+      <div class="admin-table-responsive">
+        <table class="admin-table" *ngIf="positionModelObj.length > 0">
+          <thead>
+            <tr>
+              <th><i class="fa-solid fa-hashtag"></i> ID</th>
+              <th><i class="fas fa-heading"></i> Pozisyon Adı</th>
+              <th><i class="fas fa-align-left"></i> Açıklama</th>
+              <th><i class="fas fa-tools"></i> İşlemler</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let position of positionModelObj ">
+              <td><i class="fa-solid fa-hashtag"></i>{{ position.id }}</td>
+              <td>{{ position.ad }}</td>
+              <td>{{ position.aciklama }}</td>
+              <td>
+                <button class="btn btn-warning me-2 mt-2 mb-2 w-100" (click)="editPosition(position)"><i
+                    class="fa-solid fa-pen"></i> Düzenle</button>
+              </td>
+              <td>
+                <button class="btn btn-danger me-2 mt-2 mb-2 w-100" (click)="deletePosition(position.id)"><i
+                    class="fas fa-trash-alt"></i> Sil</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
