--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -36,7 +36,7 @@
           date:'dd/MM/yyyy' }}
         </li>
         <li class="list-group-item d-flex align-items-center justify-content-between">
-          <i class="fa-solid fa-envelope"></i> <strong> Email: </strong>
+          <i class="fa-solid fa-envelope"></i> <strong> &nbsp;Email: </strong>
           <div class="w-100 d-flex">
             <input type="email" [(ngModel)]="userObj.email" class="form-control w-75 ms-3 " required>
             <button class="btn btn-primary w-25 ms-3" (click)="updateProfile()"><i class="fa-solid fa-rotate"></i> E-posta Güncelle</button>
