--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@
   --text-color: #ffffff;
   --primary-color: rgb(8, 162, 80);
   --secondary-color: rgb(35, 173, 100);
-  --secondary-text-color: #bbbbbb;
+  --secondary-text-color: #808080;
   --card-background-color: rgb(54, 57, 62);
   --input-background-color: rgb(66, 69, 73);
   --input-hover-background-color: #555555;
