--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
 
         </form>
         <div class="text-center mt-3">
-            <a routerLink="/register">Hesabınız yok mu? <strong>Kayıt Ol</strong></a>
+            <a href="/register">Hesabınız yok mu? <strong>Kayıt Ol</strong></a>
         </div>
     </div>
 </div>
