--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -50,7 +50,7 @@
             </button>
         </form>
         <div class="text-center mt-2">
-            <a routerLink="/login" class="small">Zaten hesabınız var mı? <strong>Giriş Yap</strong></a>
+            <a href="/login" class="small">Zaten hesabınız var mı? <strong>Giriş Yap</strong></a>
         </div>
     </div>
 </div>
