--- a/src/app/components/admin-basvuru-durum/admin-basvuru-durum.component.html
+++ b/src/app/components/admin-basvuru-durum/admin-basvuru-durum.component.html
@@ -10,7 +10,7 @@
           <thead>
             <tr>
               <th><i class="fa-solid fa-hashtag"></i> ID</th>
-              <th><i class="fas fa-heading"></i> basvuruDurum Adı</th>
+              <th><i class="fas fa-heading"></i> Durum Adı</th>
               <th><i class="fas fa-align-left"></i> Açıklama</th>
               <th><i class="fas fa-tools"></i> İşlemler</th>
               <th></th>
